# nt-backend

./: .gitignore  README.md  pyproject.toml  railway.toml
app/: benchmark_history.py  connection_manager.py  kalshi_client.py  live.py  logger.py  main.py  market_manager.py  models.py  order_book_manager.py  portfolio_history.py
app/clients/: __init__.py  alpaca.py  bear_lake.py
app/utils/: __init__.py  calendar.py
